--- a/Manisai/notes.html
+++ b/Manisai/notes.html
@@ -20,7 +20,9 @@
             <video src="source video" width="359" loop muted poster="E:\Manisai\web_first_images_release.png"></video> for poster 
    
     i frame tag <iframe> it uses other websites to show in our website 
-         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pmNA98zoaUk?si=pUThZQrvnmI8JZGV" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> is example for iframe 
+         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/pmNA98zoaUk?si=pUThZQrvnmI8JZGV" 
+frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
+web-share" allowfullscreen></iframe> is example for iframe 
          table 
          <tr> is uses to table row 
           <table> is uses to table 
